--- a/src/css/common.css
+++ b/src/css/common.css
@@ -74,7 +74,8 @@ body {
 
 .info-item {
   line-height: 25px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .load-more {
@@ -98,6 +99,7 @@ a:visited {
 
 .info {
   display: flex;
+  justify-content: space-around;
 }
 
 .form-btn__icon {
